# scout

./: .gitignore  AGENTS.md  README.md  improvement-claude.md  pyproject.toml  scout.toml  scout.toml.example  spec.md
.github/workflows/: ci.yml
docs/: configurable-output-folder-design.md  improvement-codex.md  setup.md
docs/superpowers/checklists/: 2026-05-20-scout-v1-acceptance.md
docs/superpowers/plans/: 2026-05-20-scout-v1.md
output/test/: 2026-05-21-044631.md  2026-05-21-044734.md  2026-05-21.md
prompts/: briefing.md  headlines.md  sectioned.md
src/scout/: __main__.py  bootstrap.py  cli.py  config.py  doctor.py  feedback.py  git_publish.py  orchestrator.py  output.py  paths.py  runlog.py  runner.py  scheduler.py  state.py  worker.py
tests/: conftest.py
tests/fakes/: llm.py
tests/integration/: test_cli_run.py  test_cli_tick.py  test_pipeline.py  test_runner_builtin.py  test_runner_claude_code.py  test_runner_codex.py  test_tool_browser.py
tests/smoke/: conftest.py  test_real_llm_builtin.py  test_real_llm_run.py
tests/unit/: test_agent_loop.py  test_cli_doctor.py  test_cli_init.py  test_cli_topics.py  test_cli_validate.py  test_feedback.py  test_git_publish.py  test_global_config.py  test_llm_fake.py  test_llm_retry.py  test_orchestrator_spawn.py  test_output.py  test_paths_resolve.py  test_runlog.py  test_runner_claude_code_parse.py  test_scheduler.py  test_state.py  test_tool_fetch_url.py  test_tool_read_history.py  test_tool_registry.py  test_tool_web_search.py  test_tool_write_digest.py  test_topic_config.py  test_topic_loader.py
(+14 files in other folders)
