[project]
name = "scout"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "litellm>=1.50",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "feedparser>=6.0",
    "playwright>=1.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpserver>=1.1",
    "freezegun>=1.5",
    "ruff>=0.6",
]

[project.scripts]
scout = "scout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]

[tool.pytest.ini_options]
markers = [
    "browser: requires playwright + chromium (skipped by default)",
    "integration: fixture-backed end-to-end tests",
    "smoke: real-LLM smoke tests; requires GOOGLE_API_KEY; skipped by default in CI",
]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
